<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button
	    android:id="@+id/startSearchBtn"
	    android:layout_width="wrap_content"
	    android:layout_height="30dp"
	    android:background="#FF0000"
	    android:layout_centerHorizontal="true"
	    android:text="@string/start_discovery" >
	</Button>
	
	<ListView
		android:id="@+id/listView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="5dip"
		android:background="#505050"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/startSearchBtn"
	    android:choiceMode="singleChoice"
	></ListView>


	<EditText
	    android:id="@+id/clientSendEditText"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   	android:background="#FFFFFF"
	   	android:textColor="#000000"
	   	android:layout_below="@id/listView"	
	    android:ems="10" >
	    <requestFocus />
	</EditText>

	<Button
	    android:id="@+id/clientSendMsgBtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_margin="5dip"
	    android:layout_below="@+id/clientSendEditText"
	    android:background="#0000FF"
	    android:text="@string/send"/>
	
	<Button
        android:id="@+id/clientTalkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clientSendMsgBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#8000FF"/>

	<TextView
		android:id="@+id/clientChatHis"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="top"
		android:background="#707070"		
		android:layout_marginBottom="5dip"
		android:layout_marginTop="200dip"
		android:text="@string/chat_his"
		android:layout_below="@+id/clientTalkBtn"
	/>
	
</RelativeLayout>
